--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -2,7 +2,7 @@ CC				=	c++
 RM				=	rm -f
 CFLAGS			=	-Wall -Wextra -Werror -std=c++98
 
-SRCS			=	main.cpp Bureaucrat.cpp
+SRCS			=	main.cpp
 
 OBJS			=	$(SRCS:.cpp=.o)
 
